add an explicit header section

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
+      <header>
       <h1>Ghibli Review App</h1>
+      </header>
 
       //select box for title of each movie in API, w/a default blank option
       <select>
