add main section for now

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -9,31 +9,33 @@
 
     <body>
       <header>
-      //need to put image of Ghibli logo here
+      //need to put image of Ghibli logo here #ghibliLogo
       <h1>Ghibli Review App</h1>
       </header>
 
-      //select box for title of each movie in API, w/a default blank option
-      <select>
+      <main>
+        //select box for title of each movie in API, w/a default blank option
+        <select>
 
-      </select>
+        </select>
 
-      //div remains empty until you add h3 (title)/p (release year)/p (description)
-      //later on
-      <div>
+        //div remains empty until you add h3 (title)/p (release year)/p (description)
+        //later on
+        <div>
 
-      <div>
+        <div>
 
-      //text input & submit input
-      //when submit, page prints review text to the a ul li below
-      <form>
+        //text input & submit input
+        //when submit, page prints review text to the a ul li below
+        <form>
 
-      </form>
+        </form>
 
-      //ul contains your submitted reviews
-      <ul>
+        //ul contains your submitted reviews
+        <ul>
 
-      </ul>
+        </ul>
+      </main>
 
     </body>
 
