--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -28,7 +28,7 @@
         //text input & submit input
         //when submit, page prints review text to the a ul li below
         <form>
-
+          <input type="text" id="userReview" placeholder="Enter your movie review.">
         </form>
 
         //ul contains your submitted reviews
