first attempt to add logo photo

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -9,7 +9,7 @@
 
     <body>
       <header>
-      //need to put image of Ghibli logo here #ghibliLogo
+      <img id="ghibliLogo" src="https://upload.wikimedia.org/wikipedia/en/c/ca/Studio_Ghibli_logo.svg" alt="Studio Ghibli logo">
       <h1>Ghibli Review App</h1>
       </header>
 
