connect html with css and js files

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -3,6 +3,8 @@
 
     <head>
 
+      <link rel="stylesheet" href="unit2assessment.css">
+      <script src="unit2assessment.js" type="text/javascript"></script>
       <title>Ghibli Reviews</title>
 
     </head>
