--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -16,24 +16,24 @@
       </header>
 
       <main>
-        //select box for title of each movie in API, w/a default blank option
+        <!--select box for title of each movie in API, w/a default blank option-->
         <select>
 
         </select>
 
-        //div remains empty until you add h3 (title)/p (release year)/p (description)
-        //later on
+        <!--div remains empty until you add h3 (title)/p (release year)/p (description)
+        later on-->
         <div>
 
         <div>
 
-        //text input & submit input
-        //when submit, page prints review text to the a ul li below
+        <!--text input & submit input-->
+        <!--when submit, page prints review text to the a ul li below-->
         <form>
           <input type="text" id="userReview" placeholder="Enter your movie review." width="400px">
         </form>
 
-        //ul contains your submitted reviews
+        <!--ul contains your submitted reviews-->
         <ul>
 
         </ul>
