add submission button for reviews

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -31,6 +31,7 @@
         <!--when submit, page prints review text to the a ul li below-->
         <form>
           <input type="text" id="userReview" placeholder="Enter your movie review." width="400px">
+          <button id="submitButton">Submit it here!</button>
         </form>
 
         <!--ul contains your submitted reviews-->
