add id to main movie description section

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -23,19 +23,19 @@
 
         <!--div remains empty until you add h3 (title)/p (release year)/p (description)
         later on-->
-        <div>
+        <div id="selectedMovieInfoSection">
 
         <div>
 
         <!--text input & submit input-->
         <!--when submit, page prints review text to the a ul li below-->
         <form>
-          <input type="text" id="userReview" placeholder="Enter your movie review." width="400px">
+          <input type="text" id="userReviewEntry" placeholder="Enter your movie review." width="400px">
           <button id="submitButton">Submit it here!</button>
         </form>
 
         <!--ul contains your submitted reviews-->
-        <ul>
+        <ul id="reviewsListContainer">
 
         </ul>
       </main>
