get the movie information to the screen

--- a/studioGhibliApi.html
+++ b/studioGhibliApi.html
@@ -15,11 +15,11 @@
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png"
         alt="Studio_Ghibli_logo">
     <h1>Ghibli Review App</h1>
-    <select name="" id="movies"></select>
+    <select name="" id="movies" required></select>
     <div id="container"></div>
     <form>
         <input type="text">
-        <input type="submit">
+        <input type="submit" value="Submit Review">
     </form>
 </body>
 
