select box, title, date, description active

--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
         </div>
         <div id="main-container">
             <select id="select-box" onchange="selectFilm()">
+                <option style="display:none"></option>
             </select>
             <div id="micro-container">
-                
+
             </div>
+            <form id="formy-mcformface">
+                <input type="text" placeholder="Write your review here">
+                <button type="submit" id="submit-btn">SUBMIT REVIEW</button>
+            </form>
+            <ul id="listy-mclistface">
+
+            </ul>
         </div>
     </body>
 </html>
