reminder that form is hidden in current code

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -30,6 +30,7 @@
         <!--text input & submit input-->
         <!--when submit, page prints review text to the a ul li below-->
         <form>
+          <!--FORM DISPLAY IS CURRENTLY HIDDEN. CAN I CHANGE THIS TO APPEAR AT WIREFRAME PART B?-->
           <input type="text" id="userReviewEntry" placeholder="Enter your movie review." width="400px">
           <button id="submitButton">Submit it here!</button>
         </form>
