adding some styling

--- a/studioGhibliApi.html
+++ b/studioGhibliApi.html
@@ -12,15 +12,24 @@
 </head>
 
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png"
-        alt="Studio_Ghibli_logo">
-    <h1>Ghibli Review App</h1>
+
+    <div id="headingContainer">
+        <div id="imageDiv">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png"
+                alt="Studio_Ghibli_logo">
+        </div>
+        <div id="headingDiv">
+            <h1>Ghibli Review App</h1>
+        </div>
+    </div>
     <select name="" id="movies" required></select>
     <div id="container"></div>
     <form>
-        <input type="text">
+        <input type="text" id="textField">
         <input type="submit" value="Submit Review">
     </form>
+    <p id="error"></p>
+    <ul id="list"></ul>
 </body>
 
 </html>
