--- a/studioGhibliApi.html
+++ b/studioGhibliApi.html
@@ -26,7 +26,7 @@
     <div id="container"></div>
     <form>
         <input type="text" id="textField">
-        <input type="submit" value="Submit Review">
+        <input type="submit" value="Submit Review" id="submit">
     </form>
     <p id="error"></p>
     <ul id="list"></ul>
