added at least an id for the select box

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -12,12 +12,12 @@
     <body>
       <header>
       <img id="ghibliLogo" src="https://upload.wikimedia.org/wikipedia/en/c/ca/Studio_Ghibli_logo.svg" alt="Studio Ghibli logo">
-      <h1>Ghibli Review App</h1>
+      <h1 id="pageHeader">Ghibli Review App</h1>
       </header>
 
       <main>
         <!--select box for title of each movie in API, w/a default blank option-->
-        <select>
+        <select id="dropdownBox">
 
         </select>
 
