--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -19,6 +19,8 @@
         <!--select box for title of each movie in API, w/a default blank option-->
         <select id="dropdownBox">
 
+          <option id="firstDropdownOption"></option>
+
         </select>
 
         <!--div remains empty until you add h3 (title)/p (release year)/p (description)
