quick edit of submit button text to match example

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -34,7 +34,7 @@
         <form>
           <!--FORM DISPLAY IS CURRENTLY HIDDEN. CAN I CHANGE THIS TO APPEAR AT WIREFRAME PART B?-->
           <input type="text" id="userReviewEntry" placeholder="Enter your movie review." width="400px">
-          <button id="submitButton">Submit it here!</button>
+          <button id="submitButton">Submit Review</button>
         </form>
 
         <!--ul contains your submitted reviews-->
