primary functionality active, css active

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             </div>
             <form id="formy-mcformface">
-                <input type="text" placeholder="Write your review here">
+                <input id="text-box" type="text" placeholder="Write your review here">
                 <button type="submit" id="submit-btn">SUBMIT REVIEW</button>
             </form>
             <ul id="listy-mclistface">
