movie reviews showing title not in bold

--- a/ghibli.html
+++ b/ghibli.html
@@ -14,6 +14,7 @@
         <img src= "https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" id="ghibli_logo">
         <h1 id="header_text"> Ghibli Review App</h1>
     </div>
+    <br>
     <div class="main">
         <select id="select_box">
             <option value="null">Select Movie Here!</option>
@@ -25,9 +26,10 @@
         </div>
         <br>
         <form id="form">
-            <input type="text" id="review_input" size="40px"></input>
+            <input type="text" id="review_input" size="40px" placeholder="Write movie review here"></input>
             <input type="submit" value="Submit Review"></input>
         </form>
+        <p id="error"></p>
         <ul></ul>
     </div>
 </body>
