--- a/assessment2.html
+++ b/assessment2.html
@@ -6,23 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src='assessment2.js' type = 'text/javascript'></script>
-
+    <link rel="stylesheet" href="assessment2.css">
     <title>Document</title>
 </head>
 <body>
-  <img src = 'https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png' >
+  <img src ="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" >
   <h1>Ghibli Review App</h1>
   <select id = "films" >
-      <!-- <option>test</option>
-    <option>test 2</option> -->
 </select>
-
   <div> title in h3, release year in p, description in p</div>
-<form>
-    <input>
-    <submit></submit>
+<form >
+    <input type="text"  id="review">
+    <input type = "submit" value = "submit">
+    <!-- <button>send</button> -->
 </form>
-<ul></ul>
+<ul id = "reviewList"></ul>
 
 </body>
 </html>
