update to styling page

--- a/studioGhibliApi.html
+++ b/studioGhibliApi.html
@@ -22,7 +22,9 @@
             <h1>Ghibli Review App</h1>
         </div>
     </div>
-    <select name="" id="movies" required></select>
+    <select name="" id="movies" required>
+        <option value="null"></option>
+    </select>
     <div id="container"></div>
     <form>
         <input type="text" id="textField">
