clear select box active

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div id="main-container">
             <select id="select-box" onchange="selectFilm()">
-                <option style="display:none"></option>
+                <option value="empty"></option>
             </select>
             <div id="micro-container">
 
