--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     </header>
     <div id="mainContainer">
     <form id="selectButton">
-        <select id="filmTitle" onclick="movieProperties()">
+        <select id="filmTitle" onmousedown= "movieProperties()">
             
         </select>
     </form>
@@ -29,8 +29,9 @@
             <form>
                 <input type="text" name="review" id="review">
                 <input type="submit" value="submit">
+                <ul id="submittedReview"></ul>
             </form>
-            <ul id="submittedReview"></ul>
+            
         </div>
     </div>
 </div>
