--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
       <div id="footer">
          Copyright © 2019 Joseph P. Pasaoa. All rights reserved. 
-         Utilizes data from the <a href="https://ghibliapi.herokuapp.com/" target="_blank">Studio Ghibli API</a>. 
-         Special thanks to them!
+         Special thanks to the <a href="https://ghibliapi.herokuapp.com/" target="_blank">Studio Ghibli API</a> from which this site utilizes data. 
       </div>
 
    </div>
