--- a/assessment2.html
+++ b/assessment2.html
@@ -14,13 +14,12 @@
   <h1>Ghibli Review App</h1>
   <select id = "films" >
 </select>
-  <div> title in h3, release year in p, description in p</div>
+  <div></div>
 <form >
     <input type="text"  id="review">
     <input type = "submit" value = "submit">
-    <!-- <button>send</button> -->
 </form>
-<ul id = "reviewList"></ul>
+<ul id = "review-list"></ul>
 
 </body>
 </html>
