just pushing files before 6pm

--- a/unit2Assessment.html
+++ b/unit2Assessment.html
@@ -23,12 +23,12 @@
 
         </select>
 
-        <div id="selectedMovieInfoSection">
+        <div id="selectedMovieSection">
 
         <div>
 
         <form>
-          <!--FORM DISPLAY IS CURRENTLY HIDDEN. CAN I CHANGE THIS TO APPEAR AT WIREFRAME PART B?-->
+
           <input type="text" id="userReviewEntry" placeholder="Enter your movie review." width="400px">
           <button id="submitButton">Submit Review</button>
         </form>
