--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </p> -->
          <h4>Submit a review</h4>
          <form id="reviewform">
-            <input form="reviewform" type="text" name="revtitle" id="revtitle" value="" style="display: none;" />
             <input form="reviewform" type="text" name="newreview" id="newreview" placeholder="What did you think?" />
+            <input form="reviewform" type="text" name="revtitle" id="revtitle" value="" />
             <div id="subtext">
                <input form="reviewform" type="submit" value="Submit!" />
                <div id="formerrors"></div>
@@ -47,12 +47,12 @@
          <h4>Reviews</h4>
          <ul id="reviewslist">
             <li>
-               <strong>SURE ✔︎</strong> 
+               <strong>beginning of the and ✔︎</strong> 
                It was okay. That's what everyone said. And then I bought the $25 IMAX ticket to watch it in 
                the theatre by myself. Boy was I unimpressed. At least they gave me an extra squirt of butter in my popcorn.
             </li>
             <li>
-               <strong>EXACTLY ✔︎</strong> 
+               <strong>sky outside the moat ✔︎</strong> 
                Not that great. Had the measles.
             </li>
             <!-- SAMPLE LI BLOCK for CODING REFERENCE
@@ -61,7 +61,7 @@
                FAV. MOVEEE. EVAAA.
             </li> -->
             <li>
-               <strong>can do no wrong ✔︎</strong> 
+               <strong>stew dioghibli✔︎</strong> 
                FAV. MOVEEE. EVAAA.
             </li>
          </ul>
