--- a/ghib.html
+++ b/ghib.html
@@ -11,7 +11,7 @@
 
         <body>
             <link href = "ghib.css" rel = "stylesheet">
-
+            <script src="ghib.js"></script>
             <div id="main-area">
             <select>
 
