not what I expected

--- a/ghib.html
+++ b/ghib.html
@@ -14,18 +14,17 @@
             <script src="ghib.js"></script>
             <div id="main-area">
             <select>
-
             </select>
             <div id="description-of-film">
 
             </div>
             <form>
-                <input id="text" type="text"  >
+                <input id="text" type="text">
                 <input id="submit" type="submit" value="Submit Review">
             </form>
             <ul id="submitted-reviews">
             </ul>
-            </div
+            </div>
         </body>
     </html>
 
