--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <input type="submit" value="Submit Review">
         </form>
 
-        <ul id="reviews">Reviews</ul>
+        <ul id="reviews">Reviews:</ul>
     </div>
 </body>
 </html>
