--- a/movie-app.html
+++ b/movie-app.html
@@ -13,14 +13,16 @@
     <div id=header>
     <h1>Ghibli Review App</h1>
     </div>
+    <div class='main-area'>
     <select id='select-movie'>
         <option value ='Select Movie Below'></option>
     </select>
     <div id='maincontent'></div>
     <form id='form'>
-        <input type='text' placeholder='How was it?' name='Write Review'>
+        <input type='text' placeholder='How was it?' id='write-review'>
         <input type='submit' name='Post-Review' id='post-review'>
     </form>
     <ul id='reviews'></ul>
+    </div>
 </body>
 </html>
