--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                <option disabled selected value> -- choose a film -- </option>
             </select>
          </div>
-         <div id="currentfilm"></div>
+         <div id="currentfilmstage"></div>
             <!-- SAMPLE CURRENT DATA for CODING REFERENCE
             <h3>The Tale of the Princess Kaguya</h3>
             <p id="year">2013</p>
