added a fteature of displaying reviews related to the selected movie

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
             <input type="submit" value="Submit Review">
         </form>
 
-        <ul id="reviews">Reviews:</ul>
+        <hr>
+
+        <div id="reviewContainer">
+            <input id ="checkbox" type="checkbox">
+            <label for="checkbox">Show reviews relative to the selected movie only</label>
+            
+            <ul id="reviews">Reviews:</ul>
+            <ul id="specificReviews">Reviews :</ul>
+        </div>
     </div>
 </body>
 </html>
