updated the first part

--- a/assessment.html
+++ b/assessment.html
@@ -12,16 +12,12 @@
             <h1>Ghibli Review App</h1>
         </div>
         <div class="select">
-            <select class="title-box">
-            <!-- <option value="text"></option>
-            <option value="text"></option>
-            <option value="text"></option>
-            <option value="text"></option>
-            <option value="text"></option> -->
+            <select id="titleBox">
+           
             </select>
         </div>
-        <div class="info-section">
-            <!-- <p id="decription"></p> -->
+        <div id="infoSection">
+           
         </div>
         <form class="form">
             <input id="text-input" type="text">
