Savita Unit2 2nd attempt

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="container">
 
         <select id="select">
+            <option value="">--Please choose an option--</option>
         </select>
 
         <div id="main">
