--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 
 </div>
 
-<select name="" id="droplist"></select>
+<select name="" id="droplist">
+  <option></option>
+</select>
 
 <div>
 <h3 id="titleMovie"></h3>
 <P id="year"></P>
 <p id="description"></p>
-<form action="">
+<form id="reviewForm">
   <input id="reviewText" type="text">
-  <input id="submit" type="text" value="Submit Review">
-  <ul>
-    <li></li>
+  <input id="submit" type="submit" value="Submit Review">
+  <ul id="addReview">
   </ul>
 </form>
   <div></div>
