reconfiguring function processes and styling

--- a/studioGhibliApi.html
+++ b/studioGhibliApi.html
@@ -22,12 +22,12 @@
             <h1>Ghibli Review App</h1>
         </div>
     </div>
-    <select name="" id="movies" required>
+    <select name="" id="movies">
         <option value="null"></option>
     </select>
     <div id="container"></div>
     <form>
-        <input type="text" id="textField">
+        <input type="text" id="textField" required>
         <input type="submit" value="Submit Review" id="submit">
     </form>
     <p id="error"></p>
