--- a/studioGhibliApi.html
+++ b/studioGhibliApi.html
@@ -22,15 +22,14 @@
             <h1>Ghibli Review App</h1>
         </div>
     </div>
-    <select name="" id="movies">
-        <option value="null"></option>
+    <select id="movies">
+        <option value="null"> ---Select a Film---</option>
     </select>
     <div id="container"></div>
     <form>
         <input type="text" id="textField" required>
         <input type="submit" value="Submit Review" id="submit">
     </form>
-    <p id="error"></p>
     <ul id="list"></ul>
 </body>
 
