update to styling

--- a/studioGhibliApi.html
+++ b/studioGhibliApi.html
@@ -22,15 +22,17 @@
             <h1>Ghibli Review App</h1>
         </div>
     </div>
-    <select id="movies">
-        <option value="null"> ---Select a Film---</option>
-    </select>
-    <div id="container"></div>
-    <form>
-        <input type="text" id="textField" required>
-        <input type="submit" value="Submit Review" id="submit">
-    </form>
-    <ul id="list"></ul>
+    <div class="mainData">
+        <select id="movies">
+            <option value="null"> ---Select a Film---</option>
+        </select>
+        <div id="container"></div>
+        <form>
+            <input type="text" id="textField" required>
+            <input type="submit" value="Submit Review" id="submit">
+        </form>
+        <ul id="list"></ul>
+    </div>
 </body>
 
 </html>
