--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-   <title>Unit 2 Assessment: Studio Ghibli Movie App | Joseph P. Pasaoa</title>
+   <title>Unit 2 Assessment: Studio Ghibli Film Reviews App | Joseph P. Pasaoa</title>
    <script src="https://unpkg.com/axios/dist/axios.min.js" type="text/javascript"></script>
    <script src="./index.js" type="text/javascript"></script>
    <script src="./sampleReviews.js" type="text/javascript"></script>
@@ -46,13 +46,12 @@
             </div>
          </form>
          <h4>Reviews</h4>
-         <ul id="reviewslist">
+         <ul id="reviewslist"></ul>
             <!-- SAMPLE LI BLOCK for CODING REFERENCE
             <li>
                <strong>can do no wrong ✔︎</strong> 
                FAV. MOVEEE. EVAAA.
             </li> -->
-         </ul>
       </div>
 
       <div id="footer">
