added random button and fixed functions

--- a/movie-app.html
+++ b/movie-app.html
@@ -11,12 +11,15 @@
 </head>
 <body>
     <div id=header>
+    <img src= "https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png"
+    height= "150px" width= "350px">
     <h1>Ghibli Review App</h1>
     </div>
     <div class='main-area'>
     <select id='select-movie'>
         <option value ='Select Movie Below'></option>
     </select>
+    <button type="button" id='randomize-movie'>Random Movie</button>
     <div id='maincontent'></div>
     <form id='form'>
         <input type='text' placeholder='How was it?' id='write-review'>
