--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="header">
   
-  <img class="img" src="/Users/bsihame/Desktop/core/unit2/unit_2_assessment/unit_2_assessment/logo.png">
+  <img class="img" src="logo.png">
   <h1>Ghibli Review App</h1>
 
 </div>
