--- a/assessment.html
+++ b/assessment.html
@@ -13,6 +13,7 @@
         </div>
         <div class="select">
             <select id="titleBox">
+                <option></option>
            
             </select>
         </div>
@@ -21,7 +22,7 @@
         </div>
         <form class="form">
             <input id="text-input" type="text">
-            <input id="btn-input" type="button" value="submit">
+            <input id="btn-input" type="submit" value="submit">
         </form>
         <ul></ul>
         
