--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
- <!DOCTYPE html>
- <html>
+<!DOCTYPE html>
+<html>
+
 <head>
   <title>unit 2 assessment</title>
-<script src = "./index.js"></script>
-<link href = "./index.css" rel = "stylesheet" />
+  <script src="./index.js"></script>
+  <link href="./index.css" rel="stylesheet" />
 
 </head>
+
 <body>
-  <div id = "header">
-      <img src = "https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" />
-      <h1>Ghibli Review App</h1>
+  <div id="header">
+    <img
+      src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" />
+    <h1>Ghibli Review App</h1>
   </div>
 
- <div id = "mainArea">
-  <select><option></option></select>
-  <div id = "info"></div>
-  <form>
-    <input type = "text"  id = "words"/>
-    <input type = "submit" id = "sub"/>
-  </form>
-  <ul></ul>
- </div>
- 
+  <div id="mainArea">
+    <select>
+      <option></option>
+    </select>
+    <div id="info"></div>
+    <form>
+      <input type="text" id="words" />
+      <input type="submit" id="sub" />
+
+    </form>
+    <button onclick="rand()">random</button>
+    <ul></ul>
+  </div>
+
 </body>
- </html>
+
+</html>
