minor code refactoring

--- a/Assesment.html
+++ b/Assesment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<head>
+<html>
+    <head>
         <title>Assesment</title>
         <script src = "assesment.js" ></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -7,7 +8,10 @@
     </head>
     <body>
         <div class = "header">
-            <img id = "headerImg" src = "https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png">
+            <img id = "headerImg" 
+            src = "https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png"
+            alt = "Studio Ghibli Logo"
+            >
             <h1 id = "headerText"> Ghibl Review App</h1>
         </div>
         
@@ -33,3 +37,4 @@
         </div>
         
     </body>
+</html>
