--- a/test.html
+++ b/test.html
@@ -17,13 +17,11 @@
 
     <div id="mainContainer">
 
-          
-
-    <form id="selectButton">
-        <select id="filmTitle" onchange="movieProperties()">
+          <div id="selectButton"></form>
+            <select id="filmTitle" onchange="movieProperties()">
             <option> </option>
-        </select>
-    </form>
+            </select>
+         </div>
 
     <div id="innerContainer">
             <h3 id="title"></h3>
@@ -32,10 +30,10 @@
     </div>
     <br>
 
-        <div id="form">
-            <form>
+        <div>
+            <form id="form">
                 <input type="text" name="review" id="review">
-                <input type="submit" value="submit">
+                <input type="submit" value="submit" >
             </form>
 
             <ul id="submittedReview"></ul>
