--- a/test.html
+++ b/test.html
@@ -15,20 +15,10 @@
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" alt="">
     </header>
 
-    <div id="mainContainer">
 
-          <div id="selectButton"></form>
-            <select id="filmTitle" onchange="movieProperties()">
-            <option> </option>
-            </select>
-         </div>
+          <div id="selectButton"></div>
 
-    <div id="innerContainer">
-            <h3 id="title"></h3>
-            <p id="year"></p>
-            <p id="description"></p> 
-    </div>
-    <br>
+<div id="container"></div>
 
         <div>
             <form id="form">
@@ -39,7 +29,6 @@
             <ul id="submittedReview"></ul>
             
     </div>
-</div>
 
 </body>
 </html>
