--- a/test.html
+++ b/test.html
@@ -18,17 +18,10 @@
 
           <div id="selectButton"></div>
 
-<div id="container"></div>
-
-        <div>
             <form id="form">
-                <input type="text" name="review" id="review">
+                <input type="text" name="review" id="review" placeholder="Submit Review">
                 <input type="submit" value="submit" >
             </form>
-
-            <ul id="submittedReview"></ul>
-            
-    </div>
 
 </body>
 </html>
