--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
     <header><h1> Ghibli Review App</h1>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" alt="">
     </header>
-
+    <div id="mainContainer">
 
           <div id="selectButton"></div>
 
@@ -22,6 +22,6 @@
                 <input type="text" name="review" id="review" placeholder="Submit Review">
                 <input type="submit" value="submit" >
             </form>
-
+    </div>
 </body>
 </html>
