--- a/test.html
+++ b/test.html
@@ -16,12 +16,20 @@
     </header>
     <div id="mainContainer">
 
-          <div id="selectButton"></div>
+          <div id="selectButton">
+              <select>
+                  <option> </option>
+              </select>
+          </div>
+        <div id="innerContainer">
 
+        </div>
+        
             <form id="form">
                 <input type="text" name="review" id="review" placeholder="Submit Review">
                 <input type="submit" value="submit" >
             </form>
+            <div id="formContainer"></div>
     </div>
 </body>
 </html>
