--- a/AssessmentCorrections.html
+++ b/AssessmentCorrections.html
@@ -7,17 +7,19 @@ for me and I feel I am already working towards a better solutiion here. -->
 <head>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src='AssessmentCorrections.js' type='text/javascript'></script>
-    <!-- <link rel="stylesheet" href="assessment2.css"> -->
+    <link rel="stylesheet" href="AssessmentCorrections.css">
     <title>trial</title>
 </head>
 
 <body>
-    <!-- <img src ="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" > -->
+    <div id = 'header'>
+    <img src ="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Studio_Ghibli_logo.svg/1200px-Studio_Ghibli_logo.svg.png" >
     <h1>Ghibli Review App</h1>
+</div>
     <select id="films">
     </select>
-    <div></div>
-    <form>
+    <div id = 'movie-info'></div>
+    <form id="reviews">
         <input type="text" id="review">
         <input type="submit" value="submit">
     </form>
