--- a/index.html
+++ b/index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/index.css"/>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="JS/index.js"></script>
     <title>Ghibli Review App</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
 </head>
-
 <body>
-    <div class="top">
-        <div class="header">
-            <h1>Ghibli Review App</h1>
+    <header>
+        <h1>Ghibli Review App</h1>
+    </header>
 
-        </div>
-    </div>
-
-    <div class="container">
-
-        <select id="select">
-            <option value="">--Please choose an option--</option>
-        </select>
-
-        <div id="main">
-        </div>
-
-
-        <form>
-            <input id="review" type="text">
-            <input id="submit" type="submit" value="Submit Review">
-        </form>
-
-        <ul id="list">
-        </ul>
-
-    </div>
+    <div id="main">
+    <select id="select">
+        <option>Choose a Movie</option>
+    </select>
+    <div id="info"></div>
+</div>
+    <form>
+        <input type="text" id="input">
+        <button>Submit Review</button>
+    </form>
 
 </body>
-
 </html>
